fix text watermark color

--- a/src/Web.config
+++ b/src/Web.config
@@ -12,7 +12,7 @@
   </configSections>
   <applicationConfiguration>
     <!--Absolute path to GroupDocs license file-->
-    <add key="licensePath" value="C:/GroupDocs/Net/Watermark/GroupDocs.Watermark.NET.lic" />
+    <add key="licensePath" value="C:/Dev/GroupDocs/GroupDocs.Total.NET.lic" />
   </applicationConfiguration>
   <serverConfiguration>
     <!--Host where to send API requests-->
