--- a/src/configuration.yml
+++ b/src/configuration.yml
@@ -16,7 +16,7 @@ server:
 application:
     # License path
     # Absolute path to GroupDocs license file
-    licensePath: 'Licenses/GroupDocs.Watermark.NET.lic'
+    licensePath: 'C:/Dev/GroupDocs/GroupDocs.Total.NET.lic'
 
 ################################################
 # Common configurations
