--- a/src/GroupDocs.Watermark.MVC.csproj
+++ b/src/GroupDocs.Watermark.MVC.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Products\Watermark\Entity\XML\TextXmlEntity.cs" />
     <Compile Include="Products\Watermark\Entity\XML\XmlEntity.cs" />
     <Compile Include="Products\Watermark\Loader\WatermarkLoader.cs" />
+    <Compile Include="Products\Watermark\Util\ColorParser.cs" />
     <Compile Include="Products\Watermark\Util\Directory\DataDirectoryUtils.cs" />
     <Compile Include="Products\Watermark\Util\Directory\DirectoryUtils.cs" />
     <Compile Include="Products\Watermark\Util\Directory\FilesDirectoryUtils.cs" />
